--- a/css/style.css
+++ b/css/style.css
@@ -10,17 +10,17 @@ body {
 	height: 100%;
 	position: relative;
 	background-color: #22B573;
-	border-top: 2px solid #006837;
-	border-right: 2px solid #006837;
-	border-bottom: 2px solid #006837;
 }
-.header-wrapper {
-	width: 100%;
 
+/* Header Style */
+header {
+	width: 100%;
+	position: absolute;
+	top: 0px;
 }
 .navigation {
 	position: absolute;
-	top: 37px;
+	top: 21px;
 	left: 37px;
 }
 .nav-li {
@@ -28,13 +28,33 @@ body {
 }
 .nav-li a {
 	color: #fff;
-	font-size: 48px;
+	font-size: 38px;
 	text-transform: uppercase;
-
+	font-family: 'PT Serif';
+}
+.nav-li {
+	margin-left: 60px;
 }
 .logo {
 	position: absolute;
 	right: 37px;
 	top: 37px;
-
+}
+/* Main Body Style */
+.white-box {	
+	width: 618px;
+	height: 400px;
+	position: absolute;
+	left: 0px;
+	bottom: 0px;
+    background-color: #fff;
+}
+.green-box2 {
+	width: 300px;
+	height: 300px;
+	background-color: #006837;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
